# RMViewer

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  pyproject.toml
examples/: config_viewer.json  script_rmviewer.py
rmviewer/: __init__.py  __main__.py  data_validation.py  handler.py  main.py  viewer.py
rmviewer/context/: data_loader.py
rmviewer/plots/: attribute_levels.py  convergence.py  cross_plot.py  risk_curve.py
rmviewer/utils/: decorators.py  figures.py
scripts/: version.sh
